--- a/SAE201/UserControls/UserControlCreerCommande.xaml
+++ b/SAE201/UserControls/UserControlCreerCommande.xaml
@@ -328,7 +328,7 @@
             </TabItem>
             <TabItem Header="Etat des commandes" >
                 <Grid>
-                    <Label Margin="10,6,584,279" Content="Etat Des Commandes" FontSize="18" FontWeight="Bold" />
+                    <Label Margin="10,6,584,279" Content="Réception Commandes" FontSize="18" FontWeight="Bold" />
                     <DataGrid x:Name="dgCommandes_Copy" Height="269" AlternatingRowBackground="#FFF8F8" AutoGenerateColumns="False" Background="White" BorderBrush="#8B0000" BorderThickness="2" GridLinesVisibility="Horizontal" HeadersVisibility="Column" HorizontalGridLinesBrush="#E0E0E0" IsReadOnly="True" ItemsSource="{Binding LesDemandes}" RowBackground="White" Margin="0,40,0,0">
                         <DataGrid.ColumnHeaderStyle>
                             <Style TargetType="{x:Type DataGridColumnHeader}">
@@ -341,12 +341,11 @@
                             </Style>
                         </DataGrid.ColumnHeaderStyle>
                         <DataGrid.Columns>
-                            <DataGridTextColumn Width="2*" Binding="{Binding NumVin.NomVin}" Header="Vin" />
+                            <DataGridTextColumn Width="*" Binding="{Binding NumCommande}" Header="N° Commande" />
                             <DataGridTextColumn Width="*" Binding="{Binding NumVin.NumFournisseur.NomFournisseur}" Header="Fournisseur" />
-                            <DataGridTextColumn Width="*" Binding="{Binding NumEmploye.Nom}" Header="Demandé par " />
-                            <DataGridTextColumn Width="*" Binding="{Binding DateDemande}" Header="Date" />
-                            <DataGridTextColumn Width="*" Binding="{Binding Accepter}" Header="Choix ">
-                            </DataGridTextColumn>
+                            <DataGridTextColumn Width="*" Binding="{Binding DateDemande, StringFormat='dd/MM/yyyy'}" Header="Date de Commande" />
+                            <DataGridTextColumn Width="*" Binding="{Binding QuantiteDemande}" Header="Nombre de Vin" />
+
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
