pour choper les modifs de cadoux

--- a/SAE201/UserControls/UserControlCreerCommande.xaml
+++ b/SAE201/UserControls/UserControlCreerCommande.xaml
@@ -38,6 +38,11 @@
                         FontSize="12"
                         Foreground="#FFD700"
                         Text="Caviste depuis 1822" />
+                    <Button
+                        x:Name="buttDeconnexion"
+                        Background="DarkRed"
+                        Content="Déconnexion"
+                        Foreground="White" Margin="20,0,0,0" />
                 </StackPanel>
             </Grid>
         </Border>
