--- a/SAE201/UserControls/UserControlCreerCommande.xaml
+++ b/SAE201/UserControls/UserControlCreerCommande.xaml
@@ -45,7 +45,7 @@
                         Background="DarkRed"
                         BorderBrush="DarkRed"
                         Content="Déconnexion"
-                        Foreground="White" Click="buttDeconnexion_Click" />
+                        Foreground="White"  />
                 </StackPanel>
             </Grid>
         </Border>
